Add categories to jobs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JobBoard</title>
+  <title>Ruby on Rails Jobs - Practice App</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% Category.all.each do |category| %>
+    <%= link_to category.name, jobs_path(category: category.name) %>
+  <% end %>
 
-<%= yield %>
+
+  <%= yield %>
 
 </body>
 </html>
