Added styling to index, show and to the form

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,6 +1,11 @@
-<% @jobs.each do |job|  %>
-  <h2> <%= link_to job.title, job %> </h2>
-  <p> <%= job.company %> </p>
-<% end %>
+<div id="jobs">
+  <% @jobs.each do |job|  %>
+  <div class="job">
+    <h2> <%= link_to job.title, job %> </h2>
+    <p> <%= job.company %> </p>
+  </div>
+  <% end %>
+</div>
 
-<%= link_to "New job", new_job_path %>
+
+
