--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,7 +1,16 @@
-<h1><%= @job.title %></h1>
-<p><%= @job.description %></p>
-<p><%= @job.company %></p>
+<div id="jobs">
+  <div class="job">
+    <h2><%= @job.title %></h2>
+    <p><%= @job.description %></p>
+    <p><%= @job.company %></p>
+    <div class="button btn btn-default"><%= link_to "Aplly for job", @job.url %></div>
+  </div>
+</div>
 
-<%= link_to "Home", root_path %>
-<%= link_to "Edit", edit_job_path(@job) %>
-<%= link_to "Delete", job_path(@job), method: :delete, data: { confirm: "Are you sure?"} %>
+<div id="links">
+  <%= link_to "Back", root_path, class: "btn btn-sm btn-default" %>
+  <%= link_to "Edit", edit_job_path(@job), class: "btn btn-sm btn-default" %>
+  <%= link_to "Delete", job_path(@job), method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-sm btn-default" %>
+</div>
+
+
